--- a/ui/sections/containers/controls/table-environment.reel/table-environment.html
+++ b/ui/sections/containers/controls/table-environment.reel/table-environment.html
@@ -21,12 +21,16 @@
                 "label": "Environments",
                 "columns":  [
                     {
-                        "value": "variable",
-                        "path": "variable"
+                        "value": "Variable",
+                        "path": "id"
                     },
                     {
-                        "value": "value",
+                        "value": "Value",
                         "path": "value"
+                    },
+                    {
+                        "value": "Optional",
+                        "path": "optional"
                     }
                 ]
             },
