--- a/ui/sections/containers/controls/table-settings.reel/table-settings.html
+++ b/ui/sections/containers/controls/table-settings.reel/table-settings.html
@@ -20,6 +20,7 @@
                 "element": {"#": "table"},
                 "delegate": {"@": "owner"},
                 "label": "Settings",
+                "emptyMessage": "No avilable settings for this image",
                 "isMultiSelectionEnabled": false,
                 "columns":  [
                     {
