--- a/ui/sections/containers/controls/table-port.reel/table-port.html
+++ b/ui/sections/containers/controls/table-port.reel/table-port.html
@@ -6,7 +6,8 @@
     {
         "owner": {
             "properties": {
-                "element": {"#": "owner"}
+                "element": {"#": "owner"},
+                "table": {"@": "table"}
             },
             "bindings": {
                 "inspector.isSaveDisabled": {"<-": "@table.isAddingNewEntry"}
@@ -19,6 +20,8 @@
                 "element": {"#": "table"},
                 "delegate": {"@": "owner"},
                 "label": "Ports",
+                "emptyMessage": "No ports added",
+                "emptyActionLabel": "Add port",
                 "columns":  [
                     {
                         "value": "host port"
