--- a/ui/sections/containers/controls/table-port.reel/table-row-port.reel/table-row-port.html
+++ b/ui/sections/containers/controls/table-port.reel/table-row-port.reel/table-row-port.html
@@ -6,7 +6,8 @@
     {
         "owner": {
             "properties": {
-                "element": {"#": "owner"}
+                "element": {"#": "owner"},
+                "table": {"@": "table"}
             },
             "bindings": {
                 "object.protocol": {"<-": "@owner.object.protocol.defined() ? @owner.object.protocol : 'TCP'"}
