network-interface alias pushes binding to multiSelectionEnabled and adjusts inspector width

--- a/ui/sections/network/inspectors/network-interface.reel/network-interface.html
+++ b/ui/sections/network/inspectors/network-interface.reel/network-interface.html
@@ -74,6 +74,7 @@
                 "addresses": {"<-": "!!@owner.object.dhcp ? @owner.object.status.aliases.filter{type != 'LINK'} : @owner.object.aliases"},
                 "canAdd": {"<-": "!@owner.object.dhcp"},
                 "canDelete": {"<-": "!@owner.object.dhcp"},
+                "isMultiSelectionEnabled": {"<-": "!@owner.object.dhcp"},
                 "isReadOnly": {"<-": "!!@owner.object.dhcp"}
             }
         },
