--- a/ui/sections/storage/inspectors/overview.reel/volume-overview-item.reel/volume-overview-item.html
+++ b/ui/sections/storage/inspectors/overview.reel/volume-overview-item.reel/volume-overview-item.html
@@ -99,8 +99,8 @@
             <div data-montage-id="toggle" class="VolumeOverviewItem-toggle">
                 <svg><use xlink:href="#i-triangle-down"/></svg>
             </div>
-            <div data-montage-id="status" class="VolumeOverviewItem-status"></div>
-            <div data-montage-id="name" class="VolumeOverviewItem-name"></div>
+            <div data-montage-id="status" class="VolumeOverviewItem-status g-margin-right--half"></div>
+            <div data-montage-id="name" class="VolumeOverviewItem-name g-margin-right--half"></div>
             <div data-montage-id="size" class="VolumeOverviewItem-size"></div>
         </div>
         <div class="VolumeOverviewItem-details g-margin-top--half">
