UPDATED: property label issues for Network 'Aliases' UI

--- a/ui/controls/ip-aliases.reel/ip-address.reel/ip-address.html
+++ b/ui/controls/ip-aliases.reel/ip-address.reel/ip-address.html
@@ -46,8 +46,8 @@
             "properties": {
                 "element": {"#": "type"},
                 "options": [
-                    { "label": "ipv4", "value": "INET"},
-                    { "label": "ipv6", "value": "INET6"}
+                    { "label": "IPv4", "value": "INET"},
+                    { "label": "IPv6", "value": "INET6"}
                 ]
             },
             "bindings": {
