close button should be hidden on the signIn modal

--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -135,7 +135,8 @@
         "signIn": {
             "prototype": "ui/sign-in.reel",
             "properties": {
-                "element": {"#": "signIn"}
+                "element": {"#": "signIn"},
+                "hideCloseButton": true
             }
         }
     }
